--- a/mss/server/static/index.html
+++ b/mss/server/static/index.html
@@ -97,7 +97,9 @@
 
     <script>
         window.drawType = ''
-        const PRIZENAMES = {
+        export const PRIZENAMES = {
+            'wudengjiang': '五等奖',
+            'sidengjiang': '四等奖',
             'sandengjiang': '三等奖',
             'erdengjiang': '二等奖',
             'yidengjiang': '一等奖',
