--- a/mss/server/static/index.html
+++ b/mss/server/static/index.html
@@ -97,7 +97,7 @@
 
     <script>
         window.drawType = ''
-        export const PRIZENAMES = {
+        const PRIZENAMES = {
             'wudengjiang': '五等奖',
             'sidengjiang': '四等奖',
             'sandengjiang': '三等奖',
