--- a/mss/server/static/matrix.html
+++ b/mss/server/static/matrix.html
@@ -143,6 +143,11 @@
                 font-weight: bold;
             }
 
+            .winners .winnerName {
+                font-size: 0.6em;
+                opacity: .7;
+            }
+
             .production .desk {
                 /* margin: auto auto; */
                 font-size: 12vh;
@@ -192,8 +197,8 @@
                     <div class="winners" id="winners" style="flex: 1;"></div>
                     <div class="table-no" id="table-no" style="display: none;">NO. 000_</div>
                     <div style="flex: 2;">
-                        <img src="./productions/jingdong500yuan.png" id="img-production" class="prize" />
-                        <div id="draw-name" style="opacity: .7; font-weight: bold; color: #fff; margin-left: 15px;">京东500元购物卡</div>
+                        <img src="./productions/ygpz.png" id="img-production" class="prize" />
+                        <div id="draw-name" style="opacity: .7; font-weight: bold; color: #fff; margin-left: 15px;">礼品卡100元</div>
                     </div>
                 </div>
 
